Bug 277626 - Enterprise header swallows text in pointed brackets in the subject
Summary: Enterprise header swallows text in pointed brackets in the subject
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.1.0
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-07-12 14:01 UTC by Peter Paulsen
Modified: 2011-10-17 16:41 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Peter Paulsen 2011-07-12 14:01:03 UTC
Version:           2.1.0 (using KDE 4.6.4) 
OS:                Linux

When the subject of an email contains text in pointed brackets <> that part of the subject is not shown in the message header when the enterprise header is used. I can only see the correct subject of the email in the message list.

E.g. a subject "Me <just kidding>" would read just as "Me" and subject "<for your information>" just would be shown as blank.


Reproducible: Always



Expected Results:  
All text in the subject should be shown in the subject line of the header.
Comment 1 Laurent Montel 2011-10-16 17:17:31 UTC
Still valid in 4.7.3 ?
Comment 2 Laurent Montel 2011-10-17 16:10:37 UTC
I confirm in 4.7.3
Comment 3 Laurent Montel 2011-10-17 16:41:26 UTC
Git commit 5d4b8ebae0ff2e29b86d8680472ca8fc699de278 by Montel Laurent.
Committed on 17/10/2011 at 18:40.
Pushed by mlaurent into branch 'master'.

Fix 277626 - Enterprise header swallows text in pointed brackets in the subject

BUG: 277626
FIXED-IN: 4.7.3

M  +2    -3    messageviewer/headerstyle.cpp

http://commits.kde.org/kdepim/5d4b8ebae0ff2e29b86d8680472ca8fc699de278
Comment 4 Laurent Montel 2011-10-17 16:41:51 UTC
Git commit 9ea409f2682513f1ac078ccc86ef99225293465c by Montel Laurent.
Committed on 17/10/2011 at 18:40.
Pushed by mlaurent into branch 'KDE/4.7'.

Fix 277626 - Enterprise header swallows text in pointed brackets in the subject

BUG: 277626
FIXED-IN: 4.7.3
(cherry picked from commit 5d4b8ebae0ff2e29b86d8680472ca8fc699de278)

M  +2    -3    messageviewer/headerstyle.cpp

http://commits.kde.org/kdepim/9ea409f2682513f1ac078ccc86ef99225293465c