Fix 277626 - Enterprise header swallows text in pointed brackets in the subject

BUG: 277626
FIXED-IN: 4.7.3
(cherry picked from commit 5d4b8ebae0ff2e29b86d8680472ca8fc699de278)